--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Awesome Website</title>
-    <link rel="stylesheet" href="web.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <header>
@@ -27,8 +27,7 @@
         <section>
             <h2>My Projects</h2>
             <ul>
-                <li><a href="project1.html">Project 1</a></li>
-                <li><a href="project2.html">Project 2</a></li>
+                <li><a href="aboutme.html">Project 1</a></li>
                 <!-- Add more project links as needed -->
             </ul>
         </section>
